--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
 
 
                             <div class="follow-us-icon-container">
-                                <a href="mailto:hello@freshpod.in" target="_blank" rel="noopener noreferrer">
+                                <a href="mailto:hello.freshpod@gmail.com" target="_blank" rel="noopener noreferrer">
                                     <i class="fa-regular fa-envelope icon" aria-hidden="true"></i>
                                 </a>      
                             </div>
@@ -440,7 +440,7 @@
                 <div class="row">
                     <div class="col-12 text-center">
                         <img src="images/logo no bg.png" class="final-section-logo" />
-                        <h1 class="contact-us-mail-id">Hello@freshpod.in</h1>
+                        <h1 class="contact-us-mail-id">hello.freshpod@gmail.com</h1>
                         <p class="contact-us-discription">Hyderabad,India</p>
                     </div>
                 </div>
