--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <script src="https://kit.fontawesome.com/0d27d9ca5a.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="home.css">
+     <meta name="google-site-verification" content="2vqzVdIpcczz7aYuKYSdy-arlr-HYsLLrNbiGYgOWH0" />
 </head>
 
 </head>
