Added Machine Image

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                    
                     </div>
                     <div class="col-12 col-md-4 text-center">
-                        <img src="images/Machine.png" 
+                        <img src="images/finalMachine.png" 
                              class="au-content-image img-fluid" 
                              alt="Feature Image" />
                     </div>
