--- a/index.html
+++ b/index.html
@@ -438,8 +438,8 @@
                 <div class="row">
                     <div class="col-12 text-center">
                         <img src="images/logo no bg.png" class="final-section-logo" />
-                        <h1 class="contact-us-mail-id">hello.freshpod@gmail.com</h1>
-                        <p class="contact-us-discription">Hyderabad,India</p>
+                        <h1 class="contact-us-mail-id">hello@freshpod.in</h1>
+                        <p class="contact-us-discription">Tanuku,Andhra Pradesh,India</p>
                     </div>
                 </div>
             </div>
