--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
 
 
                             <div class="follow-us-icon-container">
-                                <a href="mailto:hello.freshpod@gmail.com" target="_blank" rel="noopener noreferrer">
+                                <a href="mailto:hello@freshpod.in" target="_blank" rel="noopener noreferrer">
                                     <i class="fa-regular fa-envelope icon" aria-hidden="true"></i>
                                 </a>      
                             </div>
