--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 text-center">
-                        <img src="images/logo no bg.png" class="final-section-logo" />
+                        <img src="images/logo without bg.png" class="final-section-logo" />
                         <h1 class="contact-us-mail-id">hello@freshpod.in</h1>
                         <p class="contact-us-discription">Tanuku, Andhra Pradesh, India</p>
                         <p class="make-in-india">Make In India For the World</p>
