--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         
                     <div class="col-12 col-md-6 col-lg-4 mb-4">
                         <div class="Features-card">
-                            <img src="images/CostOptimization.jpg" alt="Cost Optimization" class="Features-image">
+                            <img src="images/Cost Optimization.png" alt="Cost Optimization" class="Features-image">
                             <h1 class="Features-card-title">Cost Optimization</h1>
                             <p class="Features-card-description">Reduce expenses on helmet replacements with Freshpod’s effective cleaning solutions, ensuring long-lasting helmet hygiene.</p>
                         </div>
