--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <!-- Open Graph Meta Tags (For Social Media) -->
         <meta property="og:title" content="FreshPod - India">
         <meta property="og:description" content="FreshPod is compact, cost-effective, and versatile, making it an ideal addition for rideshare companies, delivery hubs, bike rental services, and beyond. Together, we aim to set a new standard.">
-        <meta property="og:image" content="https://freshpod.in/images/racing-helmet.png">
+        <meta property="og:image" content="https://freshpod.in/images/finalMachine.png">
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://freshpod.in">
         
@@ -35,6 +35,7 @@
         <link rel="stylesheet" href="home.css">
         
         <!-- Icons -->
+        <link rel="icon" type="image/png" href="https://freshpod.in/images/favicon.ico">
         <link rel="icon" type="image/png" href="images/favicon-96x96.png" sizes="96x96" />
         <link rel="icon" type="image/svg+xml" href="images/favicon.svg" />
         <link rel="shortcut icon" href="images/favicon.ico" />
