--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <link rel="stylesheet" href="home.css">
     
         <!-- Favicon Fix -->
+        <link rel="shortcut icon" href="https://freshpod.in/favicon.ico" type="image/x-icon">
         <link rel="icon" type="image/png" sizes="32x32" href="https://freshpod.in/favicon.ico">
         <link rel="icon" type="image/png" sizes="96x96" href="https://freshpod.in/favicon-96x96.png">
         <link rel="icon" type="image/svg+xml" href="https://freshpod.in/favicon.svg">
